# flux

./: .gitmodules  CMakeLists.txt  build-debug.sh  main.cpp  run.sh
lib/glad/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/: settings.json
res/shaders/: basic_frag.glsl  basic_vertex.glsl  fragment.glsl  shape2d_vertex.glsl  vertex.glsl
res/shaders/default/: fragment.glsl  vertex.glsl
src/: CMakeLists.txt  camera.cpp  camera.h  engine.cpp  engine.h  entity.h  entity_manager.cpp  entity_manager.h  resources_manager.cpp  resources_manager.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  system_manager.cpp  system_manager.h  types.cpp  types.h
src/components/: graphics.h  input.h  movement.h  position.h  shader.h  vertices.h  window.h
src/modules/: camera.cpp  camera.h  input.cpp  input.h  input_handling.cpp  input_handling.h  light.cpp  light.h  movement.cpp  movement.h  render.cpp  render.h  render2d.h  resources.cpp  resources.h  shaders.cpp  shaders.h  textures.cpp  textures.h  window.h
src/systems/: render.cpp  render.h  window.cpp  window.h
